@@ -23,7 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-
+		<!-- ************************ Docker ************************ -->
 		<docker.image.prefix>hatespeech-detector</docker.image.prefix>
 	</properties>
 
@@ -62,12 +62,18 @@
 			<version>24.1-jre</version>
 		</dependency>
 
-		<!-- *************** Deep Learning for Java (DL4J) *************** -->
-		<!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-modelimport -->
+		<!-- ****************** Swagger ****************** -->
 		<dependency>
-			<groupId>org.deeplearning4j</groupId>
-			<artifactId>deeplearning4j-modelimport</artifactId>
-			<version>1.0.0-alpha</version>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
@@ -77,17 +83,25 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- <configuration> <forkCount>3</forkCount> <reuseForks>true</reuseForks> 
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> </configuration> -->
 			</plugin>
 
+			<!-- ************************ DOCKER PLUGIN ************************ -->
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
 				<version>1.3.6</version>
 				<configuration>
+					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
-					<buildArgs>
-						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-					</buildArgs>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
 				</configuration>
 			</plugin>
 		</plugins>
